src/main/resources/Krakatau-master/tests/assembler/bad/emptytable.j
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 10 locals 10
        tableswitch -2
            default : LS2
        LS2:
        return
    .end code
.end method
.end class
